<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/bottomnavigation_home_selector"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/bottomnavigation_search_selector"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_contactus"
        android:icon="@drawable/bottomnavigation_contactus_selector"
        android:title="@string/contactus"
        app:showAsAction="always"/>


    <!--item
        android:id="@+id/app_bar_favorites"
        android:icon="@drawable/bottomnavigation_favorites_selector"
        android:title="@string/favorites"
        app:showAsAction="always"/-->

    <item
        android:id="@+id/app_bar_more"
        android:icon="@drawable/bottomnavigation_account_selector"
        android:title="@string/account"
        app:showAsAction="always"/>
</menu>