<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/loadinganimmask_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="visible"
        android:alpha="0.70">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/loadinganim_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:indicatorColor="@color/meatchopbg_red"
            app:indicatorName="BallPulseIndicator" />

        <com.meatchop.widget.TMCTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/processingpayment_alert1"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:customTextViewFont="@string/font_open_sans_regular"/>

        <com.meatchop.widget.TMCTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/processingpayment_alert2"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:customTextViewFont="@string/font_open_sans_regular"/>

    </LinearLayout>


</RelativeLayout>