<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="left|center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/selectall_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="left|center"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/checkboxall_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:id="@+id/checkboxemptyall_view"
                android:layout_width="22dp"
                android:layout_height="22dp" />

            <ImageView
                android:id="@+id/checkboxselectedall_view"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:visibility="gone"
                android:src="@drawable/icon_ingredcheckbox_red" />
        </FrameLayout>

        <com.meatchop.widget.TMCTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Select All"
            android:textSize="13sp"
            android:textColor="@color/primary_text_color"
            app:customTextViewFont="@string/font_open_sans_bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mealingredientitem_layout"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="left|center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/checkbox_layout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:id="@+id/checkboxempty_view"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <ImageView
                    android:id="@+id/checkboxselected_view"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/icon_ingredcheckbox_red" />
            </FrameLayout>

            <com.meatchop.widget.TMCTextView
                android:id="@+id/ingredient_itemname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Cut Onion"
                android:textSize="12sp"
                android:textColor="@color/primary_text_color"
                app:customTextViewFont="@string/font_open_sans_regular"/>

            <com.meatchop.widget.TMCTextView
                android:id="@+id/ingredient_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(20 Grams)"
                android:textSize="12sp"
                android:textColor="@color/primary_text_color"
                app:customTextViewFont="@string/font_open_sans_regular"/>


        </LinearLayout>

        <com.meatchop.widget.TMCTextView
            android:id="@+id/ingredient_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="Rs.10"
            android:textSize="12sp"
            android:textColor="@color/secondary_text_color"
            app:customTextViewFont="@string/font_open_sans_semibold"/>
    </LinearLayout>



</LinearLayout>